added eo-events to loop-index

--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -10,6 +10,7 @@ $xlarge-font-size                 : 1.625em;    // ~26px
 $xxlarge-font-size                : 2.125em;    // ~34px
 
 $bg-color                         : #eee;
+$line-color                       : #ccc;
 $text-color                       : #444;
 $link-color                       : #f03;
 
