--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,5 +26,8 @@ Template:     synack-wpbp
 // Page
 @import "partials/page";
 
+// Modules
+@import "modules/eo-event";
+
 // Media queries
 @import "partials/media";
