--- a/sass/partials/_media.scss
+++ b/sass/partials/_media.scss
@@ -5,3 +5,12 @@
 @media only screen and (-webkit-min-device-pixel-ratio: 2) {
 }
 
+
+/**
+ * Widescreen display
+ */
+@media all and ( min-width: 1248px ) {
+  #container {
+    width: 1218px;
+  }
+}
