--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,11 @@
 
 /*!
-Theme Name:   unHYPED
-Author:       Fredrik Broman
-Author URI:   http://syn-ack.se/
+Theme Name:     unHYPED
+Author:         Fredrik Broman
+Author URI:     http://syn-ack.se/
+Description:    Requires <a href="http://www.harriswebsolutions.co.uk/event-organiser/">Event Organizer</a> plugin to work properly
 
-Template:     synack-wpbp
+Template:       synack-wpbp
 */
 
 // Compass
