--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -9,10 +9,17 @@ $large-font-size                  : 1.3125em;   // ~21px
 $xlarge-font-size                 : 1.625em;    // ~26px
 $xxlarge-font-size                : 2.125em;    // ~34px
 
+
 $bg-color                         : #eee;
 $line-color                       : #ccc;
-$text-color                       : #444;
+$text-color                       : #333;
+
+$dark-bg-color                    : #222;
+$dark-line-color                  : #000;
+$dark-text-color                  : #eee;
+
 $link-color                       : #f03;
+
 
 $base-vmargin                     : 24px; // =$base-line-height
 $base-hmargin                     : $base-vmargin;
