new templates for eo-event plugin plus revised styles

--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -2,6 +2,7 @@
 $base-font-family                 : unquote('Open Sans, Arial, Liberation Sans, FreeSans, sans-serif');
 $base-font-size                   : 16px;
 $base-line-height                 : 1.5;        // 24px
+$tight-line-height                : 1.2;        // 19px
 
 $xsmall-font-size                 : 0.6875em;   // ~11px
 $small-font-size                  : 0.8125em;   // ~13px
