--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -11,15 +11,14 @@ $xlarge-font-size                 : 1.625em;    // ~26px
 $xxlarge-font-size                : 2.125em;    // ~34px
 
 
-$bg-color                         : #eee;
+$bg-color                         : #f6f6f8;
 $line-color                       : #ccc;
-$text-color                       : #333;
+$mute-color                       : #888;
+$text-color                       : #444;
 
-$dark-bg-color                    : #222;
-$dark-line-color                  : #000;
-$dark-text-color                  : #eee;
+$decor-color                      : #f03;
 
-$link-color                       : #f03;
+$link-color                       : #222;
 
 
 $base-vmargin                     : 24px; // =$base-line-height
