--- a/sass/partials/_page.scss
+++ b/sass/partials/_page.scss
@@ -75,6 +75,12 @@ img {
   }
 }
 
+#complementary {
+  // Aside is temporarily not used
+  display: none;
+  visibility: hidden;
+}
+
 // Debug colors
 @if ( $debug ) {
   #container {
