--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -15,8 +15,8 @@ $line-color                       : #ddd;
 $mute-color                       : #999;
 $text-color                       : #333;
 $decor-color                      : #f03;
-$link-color                       : #111;
-$link-hover-color                 : $decor-color;
+$link-color                       : $decor-color;
+$link-hover-color                 : $text-color;
 $link-active-color                : $link-hover-color;
 $link-visited-color               : $link-color;
 $link-focus-color                 : $link-hover-color;
