--- a/sass/partials/_page.scss
+++ b/sass/partials/_page.scss
@@ -14,6 +14,21 @@ a {
   text-decoration: none;
 }
 
+blockquote {
+  font-style: italic;
+  text-indent: -.4em;
+  *:first-child {
+    &:before {
+      content: '“';
+    }
+  }
+  *:last-child {
+    &:after {
+      content: '”';
+    }
+  }
+}
+
 #container {
   @include box-sizing( border-box );
   @include clearfix;
