--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,6 +26,7 @@ Template:       synack-wpbp
 // Modules
 @import "modules/eo"; // event organizer plugin
 @import "modules/ss-form"; // wordpress google form plugin
+@import "modules/userbio";
 @import "modules/components";
 
 // Theme styles
